--- a/app/src/main/resources/MessageBundle_pt.properties
+++ b/app/src/main/resources/MessageBundle_pt.properties
@@ -1,61 +1,67 @@
+0.is.not.in={0} não está em {1}
+add.a.subdomain=adicionar um subdomínio
+are.you.sure.you.want.to.delete.0.subdomain=tem certeza que deseja deletar {0}
+are.you.sure.you.want.to.delete.all.Duck.DNS.subdomains=tem certeza que deseja deletar todos {0} subdomínios
+are.you.sure.you.want.to.delete.this.Duck.DNS.subdomain.object=tem certeza que deseja deletar este {0} subdomínio
+cancel.and.exit=cancelar e sair
+cleaning.subdomain.s.IP.addresses=limpando endereço(s) IP do(s) subdomínio(s)s
+clean.subdomain.s.IP.addresses=limpa(r) endereço(s) IP do(s) subdomínio(s)
+confirmation=confirmação
+create=criar
+delete.all.subdomains=deletar todos subdomínios
+delete.a.subdomain=deletar um subdomínio
+delete=deletar
+delete.subdomain.by.name=deletar subdomínio pelo seu nome
+delete.subdomain.by.position=deletar subdomínio pela sua posição
+display.this.information=mostra esta informação
 duck.dns=Duck DNS
 duck.dns.ip.address.updater=Atualizador de Endereço IP do Duck DNS
-subdomain.creation.menu=menu de criação de subdomínio
-options=opções
-exit=sair
-save.and.exit=salvar e sair
-subdomain.name=nome do subdomínio
-token=token
 enable.IPv4=habilitar IPv4
 enable.IPv6=habilitar IPv6
 exiting=saindo
-saving.and.exiting=salvando e saindo
-subdomain.name.is.null=nome do subdomínio é nulo
-token.is.null=token é nulo
-subdomain.deletion.menu=menu de deleção de subdomínio
-list.subdomains=listar subdomínios
-delete.subdomain.by.position=deletar subdomínio pela sua posição
-delete.subdomain.by.name=deletar subdomínio pelo seu nome
-delete.all.subdomains=deletar todos subdomínios
-subdomain.deletion.by.position.menu=menu de deleção de subdomínio pela sua posição
-are.you.sure.you.want.to.delete.this.Duck.DNS.subdomain.object=tem certeza que deseja deletar este {0} subdomínio
-y.yes=s - Sim
-n.no=n - Não
-y=s
-n=n
-subdomain.deletion.by.name=deleção de subdomínio pelo seu nome
-subdomain.delete.all.menu=menu de deleção de todos subdomínios
-are.you.sure.you.want.to.delete.all.Duck.DNS.subdomains=tem certeza que deseja deletar todos {0} subdomínios
-subdomain.0.not.founded=subdomínio {0} não encontrado
-would.you.like.to.search.again=deseja pesquisar de novo
-subdomains=subdomínios
-subdomain.menu=menu dos subdomínios
-add.a.subdomain=adicionar um subdomínio
-retrieve.a.subdomain=obter um subdomínio
-update.a.subdomain=atualizar um subdomínio
-delete.a.subdomain=deletar um subdomínio
-subdomain.update.menu=menu de atualização de subdomínio
-update.subdomain.by.position=atualizar subdomínio pela sua posição
-update.subdomain.by.name=atualizar subdomínio pelo seu nome
-cancel.and.exit=cancelar e sair
-subdomain.update.by.position.menu=menu de atualização de subdomínio pela sua posição
-help.menu=menu de ajuda
+exit=sair
 getting.help=obtendo ajuda
+graphical.user.interface.is.not.supported.on.this.machine=interface gráfica não é suportada nesta máquina
+help.menu=menu de ajuda
+IPv6.address.has.not.been.found.on.this.machine=endereço IPv6 não foi encontrado nesta máquina
+list.subdomains=listar subdomínios
+main.menu=menu principal
+n=n
+n.no=n - Não
+object.already.exists=objeto já existe
 opening.console.menu=abrindo o menu do console
 opening.graphical.user.interface.menu=abrindo o menu da interface gráfica
-running.Duck.DNS.IP.Address.Updater.just.one.time=rodando {0} apenas uma única vez
-running.Duck.DNS.IP.Address.Updater.in.infinite.loop=rodando {0} em looping infinito
-main.menu=menu principal
-0.is.not.in={0} não está em {1}
-graphical.user.interface.is.not.supported.on.this.machine=interface gráfica não é suportada nesta máquina
-IPv6.address.has.not.been.found.on.this.machine=endereço IPv6 não foi encontrado nesta máquina
-object.already.exists=objeto já existe
-are.you.sure.you.want.to.delete.0.subdomain=tem certeza que deseja deletar {0}
-delete=deletar
-update=atualizar
+options=opções
+retrieve.a.subdomain=obter um subdomínio
 retrieve=obter
-create=criar
+run.with.graphical.user.interface=roda com interface gráfica
+run.without.graphical.user.interface=roda sem interface gráfica
+save.and.exit=salvar e sair
+saving.and.exiting=salvando e saindo
+subdomain.0.not.founded=subdomínio {0} não encontrado
+subdomain.creation.menu=menu de criação de subdomínio
+subdomain.delete.all.menu=menu de deleção de todos subdomínios
+subdomain.deletion.by.name=deleção de subdomínio pelo seu nome
+subdomain.deletion.by.position.menu=menu de deleção de subdomínio pela sua posição
+subdomain.deletion.menu=menu de deleção de subdomínio
+subdomain.menu=menu do(s) subdomínio(s)
+subdomain.name.is.null=nome do subdomínio é nulo
+subdomain.name=nome do subdomínio
+subdomains=subdomínios
+subdomain.update.by.position.menu=menu de atualização de subdomínio pela sua posição
+subdomain.update.menu=menu de atualização de subdomínio
+token.is.null=token é nulo
+token=token
+update.a.subdomain=atualizar um subdomínio
+update=atualizar
 update.subdomain=atualizar subdomínio
-confirmation=confirmação
-run.Duck.DNS.IP.Address.Updater.just.one.time=rodar {0} apenas uma única vez
-run.Duck.DNS.IP.Address.Updater.in.infinite.loop=rodar {0} em looping infinito
+update.subdomain.by.name=atualizar subdomínio pelo seu nome
+update.subdomain.by.position=atualizar subdomínio pela sua posição
+update.subdomain.s.IP.addresses=atualizar endereço(s) IP do(s) subdomínio(s)
+update.subdomain.s.IP.addresses.in.infinite.looping=atualizar endereço(s) IP do(s) subdomínio(s) em looping infinito
+update.subdomain.s.IP.addresses.in.infinite.looping.with.a.delay.of.time.in.0.milliseconds=atualiza(r) endereço(s) IP do(s) subdomínios em looping infinito com um tempo de delay de {0} milissegundos
+updating.subdomain.s.IP.addresses=atualizando endereço(s) IP do(s) subdomínio(s)
+updating.subdomain.s.IP.addresses.in.infinite.looping=atualizando endereço(s) IP do(s) subdomínio(s) em looping infinito
+would.you.like.to.search.again=deseja pesquisar de novo
+y=s
+y.yes=s - Sim
